[build-system]
requires = ["flit_core>=3.4", "numpy", "matplotlib", "astropy", "scipy", "pandas"]
build-backend = "flit_core.buildapi"

[project]
name = "distroi"
version = "0.0.1"
authors = [
  { name="Toon De Prins", email="toon.deprins@protonmail.com" },
]
maintainers = [
  { name="Toon De Prins", email="toon.deprins@protonmail.com" },
]
description = """A package intended to compute astronomical optical interferometry (OI) observables from
radiative transfer model images."""
readme = "README.md"
license = {file = "LICENSE"} 
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
  "numpy",
  "matplotlib",
  "astropy",
  "scipy",
  "pandas",
]

[project.urls]
Homepage = "https://github.com/DePrinsT/distroi"
Repository = "https://github.com/DePrinsT/distroi"
Documentation = "https://distroi.readthedocs.io/en/latest/"
Issues = "https://github.com/DePrinsT/distroi/issues"

